# job_dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  scrape.yml
src/: __init__.py  cli.py
src/analytics/: __init__.py  keywords.py  recommendations.py  stats.py
src/dashboard/: __init__.py  app.py
src/dashboard/pages/: analytics.py  applications.py  help_page.py  jobs.py  settings.py
src/database/: __init__.py  db.py  models.py
src/notifications/: __init__.py  email.py
src/scrapers/: __init__.py  arbeidsplassen.py  base.py  finn.py
tests/: __init__.py  test_database.py  test_scrapers.py
